--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #cfcfcf;
   --foreground: #171717;
   --primary: #FED835;
   --secondary: #304fff;
